--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="logo-container">
         <img src="cropped-logo-FB-1.png" id="siteLogo" alt="Finance Brothers Logo" class="logo d-block mx-auto">
         <div class="zoom-controls">
+            <button id="calcToggleBtn" class="btn btn-sm" aria-label="Otwórz kalkulator">🧮</button>
             <button id="zoomInBtn" class="btn btn-sm" aria-label="Powiększ">+</button>
             <button id="zoomOutBtn" class="btn btn-sm" aria-label="Pomniejsz">-</button>
-            <button id="calcToggleBtn" class="btn btn-sm" aria-label="Otwórz kalkulator">🖩</button>
             <button id="toggleDarkModeBtn" class="btn btn-sm" aria-label="Przełącz tryb ciemny">🌙</button>
         </div>
     </div>
@@ -53,7 +53,7 @@
         <section class="content-section">
             <div class="content-box">
                 <h2>Witaj na Portalu Finansowym!</h2>
-                <p>Znajdziesz tutaj narzędzia i informacje, które pomogą Ci zarządzać finansami. Wybierz opcję z menu po lewej stronie lub skorzystaj z kalkulatora, klikając przycisk 🖩 u góry.</p>
+                <p>Znajdziesz tutaj narzędzia i informacje, które pomogą Ci zarządzać finansami. Wybierz opcję z menu po lewej stronie lub skorzystaj z kalkulatora, klikając przycisk 🧮 u góry.</p>
                 <h3>Przykładowy artykuł</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <p><a href="#czytaj-wiecej">Czytaj więcej</a></p>
