--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         <section class="content-section">
             <div class="content-box">
                 <h2>Witaj na Portalu Finansowym!</h2>
+                <video width="100%" height="315" controls class="content-video">
+                    <source src="kalkulator.mp4" type="video/mp4">
+                    Twoja przeglądarka nie obsługuje odtwarzania wideo.
+                </video>
                 <p>Znajdziesz tutaj narzędzia i informacje, które pomogą Ci zarządzać finansami. Wybierz opcję z menu po lewej stronie lub skorzystaj z kalkulatora, klikając przycisk z ikoną kalkulatora u góry.</p>
                 <h3>Przykładowy artykuł</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -350,7 +354,7 @@
         margin-bottom: 15px;
     }
 
-    .content-box iframe {
+    .content-box iframe, .content-box video {
         border-radius: 10px;
         margin-bottom: 15px;
     }
